
Incremental changes are listed in the project’s [commit history](https://github.com/splorp/newton-glossary/commits/master).

Recently added terms and sources can be found on the [latest additions](/latest) page.

### _$v

Terms: _$t
Sources: _$s

#### Summary of changes:

+ Updated [Kirby](https://getkirby.com/) to version [3.9.0](https://github.com/getkirby/kirby/releases/tag/3.9.0)

### 3.0.6

20 January 2022

Terms: 1,300
Sources: 137

#### Summary of changes:

+ Added 5 new terms
+ Added 1 new source
+ Updated and expanded several existing entries
+ Updated all screenshots and images for HiDPI screens
+ Updated [Kirby](https://getkirby.com/) to version [3.8.4](https://github.com/getkirby/kirby/releases/tag/3.8.4)
+ Updated [Kirby Paperback Export](https://github.com/splorp/kirby-paperback-export) plugin to version [2.0.6](https://github.com/splorp/kirby-paperback-export/releases/tag/2.0.6)

### 3.0.5

26 November 2022

Terms: 1,295
Sources: 136

#### Summary of changes:

+ Added 1 new term
+ Updated and expanded several existing entries
+ Updated [Kirby](https://getkirby.com/) to version [3.8.2](https://github.com/getkirby/kirby/releases/tag/3.8.2)
+ Updated [Alphabetise](https://github.com/shoesforindustry/kirby-plugins-alphabetise) plugin to version 0.1.2
+ Updated [Cachebuster](https://github.com/schnti/kirby3-cachebuster) plugin to version [1.0.3](https://github.com/schnti/kirby3-cachebuster/releases/tag/1.0.3)
+ Added a <a href="http://microformats.org/wiki/rel-me">rel="me"</a> link for <a href="https://mastodon.social/@splorp">Mastodon</a> profile verification

### 3.0.4

29 September 2022

Terms: 1,294
Sources: 136

#### Summary of changes:

+ Updated [Kirby](https://getkirby.com/) to version [3.7.5](https://github.com/getkirby/kirby/releases/tag/3.7.5)
+ Updated [Kirby Clear Cache](https://owebstudio.com/kirby/plugins/clear-cache) plugin to version 1.0.2

### 3.0.3

24 August 2022

Terms: 1,294
Sources: 136

#### Summary of changes:

+ Added 1 new term